fix appsettings backend

--- a/backend/BqApi/appsettings.json
+++ b/backend/BqApi/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "TgBotSettings": {
-    "Token": "7404749423:AAHR0ok9_vzHi_9pEFCwmBPPs-YkVE9YC8Q"
+    "Token": ""
+  },
+  "ConnectionStrings": {
+    "PgsqlConnection": "Host=localhost;Port=5432;Database=bq;Password=;Username="
   }
 }
