fix tokens && fix disabled actions in table

--- a/backend/BqApi/appsettings.json
+++ b/backend/BqApi/appsettings.json
@@ -10,6 +10,6 @@
     "Token": ""
   },
   "ConnectionStrings": {
-    "PgsqlConnection": "Host=localhost;Port=5432;Database=bq;Password=;Username="
+    "PgsqlConnection": "Host=localhost;Port=5432;Database=bq;Password=1234;Username=postgres"
   }
 }
