--- a/backend/BqApi/Properties/launchSettings.json
+++ b/backend/BqApi/Properties/launchSettings.json
@@ -2,17 +2,14 @@
   "profiles": {
     "BeautyQueenApi": {
       "commandName": "Project",
-      //"launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:7169"
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
-      //"launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -31,8 +28,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:7169",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:62335/",
+      "sslPort": 44369
     }
   }
 }
