--- a/backend/BqApi/appsettings.json
+++ b/backend/BqApi/appsettings.json
@@ -10,6 +10,10 @@
     "Token": ""
   },
   "ConnectionStrings": {
-    "PgsqlConnection": "Host=localhost;Port=5432;Database=bq;Password=1234;Username=postgres"
+    "PgsqlConnection": "Host=localhost;Port=5432;Database=bq;Password=;Username="
+  },
+  "CodegenSettings": {
+    "GenerationEnabled": false,
+    "GeneratePath": ""
   }
 }
