fix file upload

--- a/backend/BqApi/appsettings.json
+++ b/backend/BqApi/appsettings.json
@@ -15,5 +15,8 @@
   "CodegenSettings": {
     "GenerationEnabled": false,
     "GeneratePath": ""
+  },
+  "UploadSettings": {
+    "UploadPath": ""
   }
 }
