fix github actions deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         KEY: ${{ secrets.SSHKEY }}
         script: |
           cd /var/www/bq-redesign
-          sudo npm i --prefix frontend
+          echo ${{ secrets.PWD }} | sudo -S npm i --prefix frontend
           npm run build --prefix frontend
           cd backend/BqApi
           sudo dotnet build
