--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "react-to-pdf": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
